sektor/ops/k8s/overlays/demo/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sektor-btp-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  tls: []
  rules:
    - host: api.sektor-demo.nafuralabs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sektor-btp-backend
                port:
                  number: 8082
    - host: sektor-demo.nafuralabs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sektor-btp-web
                port:
                  number: 80
